Small appearance changes for demo

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@ index.html - The web page document containing the canvas (drawing surface).  It 
 <!--<button id="p2">Part 2</button>-->
 <!--<button id="p3">Part 3</button>-->
 
-<div class="row">
-    <div class="column">
-        <pre>Input: </pre>
-        <textarea id="input" cols="80" rows="5"></textarea>
-    </div>
-    <div class="column">
-        <pre>Output: </pre>
-        <textarea id="output" cols="80" rows="5"></textarea>
-    </div>
-</div>
+<!--<div class="row">-->
+<!--    <div class="column">-->
+<!--        <pre>Input: </pre>-->
+<!--        <textarea id="input" cols="80" rows="5"></textarea>-->
+<!--    </div>-->
+<!--    <div class="column">-->
+<!--        <pre>Output: </pre>-->
+<!--        <textarea id="output" cols="80" rows="5"></textarea>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 <!-- The following code embeds a WebGL canvas panel powered by a tree of Components from tiny-graphics.  //-->
